# subtitle-modifier

./: CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-29-claude-api-support.md
docs/superpowers/specs/: 2026-04-29-claude-api-support-design.md
src/subtitle_modifier/: __init__.py  benchmark.py  claude.py  cli.py  converter.py  llm.py  subtitle_io.py
src/subtitle_modifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_claude.py  test_converter.py  test_integration.py  test_llm.py
