[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-modifier"
version = "0.1.0"
description = "Convert ALL-UPPERCASE subtitle text to sentence case, preserving proper nouns via NLP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pysubs2>=1.7.0",
    "spacy>=3.5.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
dev = ["pytest>=7.0"]

[project.scripts]
subtitle-modifier = "subtitle_modifier.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
